--- a/payment.html
+++ b/payment.html
@@ -1,112 +1,242 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkout | ChatPoint</title>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-    <style>
-        :root {
-            --bg: #0d0e12;
-            --card: #14151a;
-            --text: #e6e6e6;
-            --text-muted: #9b9ca1;
-            --primary: #e6b25c;
-            --primary-dark: #bb8c3d;
-            --glass: rgba(255,255,255,0.06);
-            --border: rgba(255,255,255,0.08);
-            --radius: 18px;
-            --shadow: rgba(0,0,0,0.55);
-        }
-        * { margin:0; padding:0; box-sizing:border-box; }
-        body {
-            font-family: 'Outfit', sans-serif;
-            background: var(--bg);
-            color: var(--text);
-            min-height: 100vh;
-            padding: 1.2rem;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 620px;
-            margin: 0 auto;
-            background: var(--card);
-            border-radius: var(--radius);
-            padding: 2.2rem;
-            border: 1px solid var(--border);
-            box-shadow: 0 12px 40px var(--shadow);
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 1.8rem;
-            color: var(--primary);
-            font-size: 2.2rem;
-            font-weight: 900;
-        }
-        .form-group { margin-bottom: 1.5rem; }
-        label {
-            display: block;
-            margin-bottom: 0.6rem;
-            font-weight: 600;
-            font-size: 1.05rem;
-            color: var(--text);
-        }
-        input, textarea {
-            width: 100%;
-            padding: 1rem;
-            border-radius: 14px;
-            border: 1px solid var(--border);
-            background: #1a1b20;
-            color: var(--text);
-            font-size: 1.05rem;
-            transition: all 0.25s ease;
-        }
-        input:focus, textarea:focus {
-            outline: none;
-            border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(230,178,92,0.2);
-        }
-        .cart-summary {
-            background: var(--glass);
-            padding: 1.6rem;
-            border-radius: 16px;
-            margin: 2rem 0;
-            border: 1px solid var(--border);
-        }
-        .cart-item {
-            display: flex;
-            justify-content: space-between;
-            padding: 0.9rem 0;
-            border-bottom: 1px dashed var(--border);
-            font-size: 1.05rem;
-        }
-        .delivery-free { color: #4caf50; font-weight: 700; }
-        .total-row {
-            display: flex;
-            justify-content: space-between;
-            font-weight: 900;
-            font-size: 1.6rem;
-            margin-top: 1.4rem;
-            padding-top: 1.4rem;
-            border-top: 2px solid var(--primary);
-            color: var(--primary);
-        }
-        .btn {
-            width: 100%;
-            padding: 1.4rem;
-            font-size: 1.3rem;
-            font-weight: 800;
-            border: none;
-            border-radius: 16px;
-            background: var(--primary);
-            color: #000;
-            cursor: pointer;
-            margin-top: 2rem;
-            transition: all 0.3s ease;
-            box-shadow: 0 8px 24px rgba(230,178,92,0.3);
-        }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Checkout | ChatPoint</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+
+<style>
+:root {
+  --bg:#0d0e12;
+  --card:#14151a;
+  --text:#e6e6e6;
+  --text-muted:#9b9ca1;
+  --primary:#e6b25c;
+  --primary-dark:#bb8c3d;
+  --glass:rgba(255,255,255,0.06);
+  --border:rgba(255,255,255,0.08);
+  --radius:18px;
+}
+
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Outfit',sans-serif;}
+body{background:var(--bg);color:var(--text);padding:1.5rem;}
+.container{max-width:520px;margin:auto;}
+
+.cart-summary{
+  background:var(--glass);
+  padding:1.6rem;
+  border-radius:16px;
+  border:1px solid var(--border);
+  margin:2rem 0;
+}
+
+.cart-item{
+  display:flex;
+  justify-content:space-between;
+  padding:.8rem 0;
+  border-bottom:1px dashed var(--border);
+}
+
+.total-row{
+  display:flex;
+  justify-content:space-between;
+  font-size:1.6rem;
+  font-weight:900;
+  margin-top:1.4rem;
+  padding-top:1.4rem;
+  border-top:2px solid var(--primary);
+  color:var(--primary);
+}
+
+.btn{
+  width:100%;
+  padding:1.4rem;
+  font-size:1.3rem;
+  font-weight:800;
+  border:none;
+  border-radius:16px;
+  background:var(--primary);
+  color:#000;
+  cursor:pointer;
+  margin-top:2rem;
+}
+.btn:hover{background:var(--primary-dark);}
+.btn:disabled{background:#444;cursor:not-allowed;}
+
+.msg{
+  text-align:center;
+  padding:1.4rem;
+  border-radius:14px;
+  margin:1.7rem 0;
+  display:none;
+}
+.success{background:rgba(40,167,69,.15);color:#4caf50;border:1px solid rgba(40,167,69,.3);}
+.error{background:rgba(220,53,69,.12);color:#dc3545;border:1px solid rgba(220,53,69,.3);}
+
+#orderPopup{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.75);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:2000;
+}
+.popup-content{
+  background:var(--card);
+  padding:3rem 2.5rem;
+  border-radius:var(--radius);
+  text-align:center;
+  border:2px solid var(--primary);
+}
+</style>
+</head>
+
+<body>
+<div class="container" id="mainContainer"></div>
+
+<div id="orderPopup">
+  <div class="popup-content">
+    <h2>Order Placed!</h2>
+    <p id="popupText">Redirecting to WhatsApp...</p>
+    <i class="fas fa-check-circle" style="font-size:5rem;color:#4caf50;margin-top:1rem;"></i>
+  </div>
+</div>
+
+<script>
+const CART_KEY="chatpoint_cart";
+const USER_KEY="chatpoint_user";
+const PRIMARY="973623364";
+const BACKUP="808975913";
+const BACKEND_URL="https://chatpoint-3ycv.onrender.com/api/save-order";
+
+function checkLogin(){
+  const user=JSON.parse(localStorage.getItem(USER_KEY)||"null");
+  if(!user||!user.phone){
+    document.getElementById("mainContainer").innerHTML=`
+      <div style="text-align:center;padding:8rem 1rem;">
+        <h3>Please Login First</h3>
+        <a href="login.html" style="color:var(--primary);font-weight:800;">Login →</a>
+      </div>`;
+    return null;
+  }
+  return user;
+}
+
+function renderForm(user){
+  const savedCart=JSON.parse(localStorage.getItem(CART_KEY)||"{}");
+  if(!Object.keys(savedCart).length){
+    document.getElementById("mainContainer").innerHTML=`
+      <div style="text-align:center;padding:8rem 1rem;">
+        <h3>Cart is Empty</h3>
+        <a href="index.html" style="color:var(--primary);font-weight:800;">Shop Now →</a>
+      </div>`;
+    return;
+  }
+
+  let subtotal=0;
+  let itemsArray=[];
+
+  Object.keys(savedCart).forEach(shop=>{
+    Object.keys(savedCart[shop]).forEach(name=>{
+      const item=savedCart[shop][name];
+      if(item.qty>0){
+        subtotal+=item.price*item.qty;
+        itemsArray.push(item);
+      }
+    });
+  });
+
+  const grandTotal=subtotal;
+
+  window.tempOrderData={itemsArray,subtotal,grandTotal,cart:savedCart};
+
+  document.getElementById("mainContainer").innerHTML=`
+    <h2>Checkout</h2>
+    <div id="statusMsg" class="msg"></div>
+
+    <input id="name" value="${user.name||""}" placeholder="Name" required>
+    <input id="phone" value="${user.phone||""}" placeholder="Phone" required>
+    <textarea id="address1" rows="2" placeholder="Address Line 1" required></textarea>
+    <textarea id="address2" rows="2" placeholder="Address Line 2 (optional)"></textarea>
+
+    <div class="cart-summary">
+      <h3 style="color:var(--primary);margin-bottom:1rem;">Order Summary</h3>
+      ${itemsArray.map(i=>`
+        <div class="cart-item">
+          <span>${i.name} × ${i.qty}</span>
+          <span>₹${(i.price*i.qty).toFixed(0)}</span>
+        </div>`).join("")}
+      <div class="cart-item"><b>Subtotal</b><b>₹${subtotal.toFixed(0)}</b></div>
+      <div class="total-row"><span>Total</span><span>₹${grandTotal.toFixed(0)}</span></div>
+    </div>
+
+    <button id="placeOrderBtn" class="btn">Place Order (COD)</button>
+  `;
+
+  document.getElementById("placeOrderBtn").onclick=placeOrder;
+}
+
+async function placeOrder(){
+  const name=nameEl.value=nameEl=document.getElementById("name").value.trim();
+  const phone=document.getElementById("phone").value.trim();
+  const address1=document.getElementById("address1").value.trim();
+  const address2=document.getElementById("address2").value.trim();
+
+  if(!name||!phone||!address1){
+    showMessage("Please fill all required fields","error");
+    return;
+  }
+
+  const btn=document.getElementById("placeOrderBtn");
+  btn.disabled=true;btn.textContent="Processing...";
+
+  const {cart,grandTotal}=window.tempOrderData;
+
+  document.getElementById("orderPopup").style.display="flex";
+  confetti({particleCount:120,spread:80,origin:{y:.6}});
+
+  let summary="";
+  Object.keys(cart).forEach(shop=>{
+    Object.keys(cart[shop]).forEach(item=>{
+      const i=cart[shop][item];
+      if(i.qty>0) summary+=`${item} × ${i.qty}\n`;
+    });
+  });
+
+  const msg=encodeURIComponent(`NEW ORDER\n${summary}\nName:${name}\nPhone:${phone}\nAddress:${address1} ${address2}`);
+  window.open(`https://wa.me/91${PRIMARY}?text=${msg}`,"_blank");
+  setTimeout(()=>window.open(`https://wa.me/91${BACKUP}?text=${msg}`,"_blank"),1200);
+
+  try{
+    await fetch(BACKEND_URL,{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({name,phone,address1,address2,grandTotal,cart,paymentMethod:"cash"})
+    });
+  }catch{}
+
+  localStorage.removeItem(CART_KEY);
+  setTimeout(()=>location.href="tracking.html",5000);
+}
+
+function showMessage(t,type){
+  const el=document.getElementById("statusMsg");
+  el.textContent=t;el.className="msg "+type;el.style.display="block";
+}
+
+window.onload=()=>{
+  const user=checkLogin();
+  if(user)renderForm(user);
+};
+</script>
+</body>
+</html>
         .btn:hover:not(:disabled) {
             background: var(--primary-dark);
             transform: translateY(-4px);
